# ant-sim-cpp

./: .gitignore  CMakeLists.txt
src/: config.hpp  main.cpp
src/render/: renderer.hpp
src/simulation/: ant.cpp  ant.hpp  colony.hpp  simulator.hpp
src/utils/: random.hpp
src/world/: colony_grid.hpp  grid.hpp  shared_grid.hpp  world.hpp
